--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 			<div class="salesHits__blockButtonMore">
 				<div class="salesHits__blockButtonMore__button txt">
 					Показать еще
-					<img src="img/icons/arrRight32.png" alt="">
+					<img src="img/icons/main/arrRight32.png" alt="">
 				</div>
 			</div>
 		</section>
