--- a/index.html
+++ b/index.html
@@ -308,10 +308,12 @@
 			</div> -->
 			<div class="salesHits__games" id="salesHits_content">
 			</div>
-			<div class="salesHits__blockButtonMore">
-				<div class="salesHits__blockButtonMore__button txt">
-					Показать еще
-					<img src="img/icons/main/arrRight32.png" alt="">
+			<div class="blockButtonMore">
+				<div class="blockButtonMore__button txt">
+					<span>Показать еще</span>
+					<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M9.71069 18.2929C10.1012 18.6834 10.7344 18.6834 11.1249 18.2929L16.0123 13.4006C16.7927 12.6195 16.7924 11.3537 16.0117 10.5729L11.1213 5.68254C10.7308 5.29202 10.0976 5.29202 9.70708 5.68254C9.31655 6.07307 9.31655 6.70623 9.70708 7.09676L13.8927 11.2824C14.2833 11.6729 14.2833 12.3061 13.8927 12.6966L9.71069 16.8787C9.32016 17.2692 9.32016 17.9023 9.71069 18.2929Z" fill="#fff"/>
+					</svg>
 				</div>
 			</div>
 		</section>
@@ -327,10 +329,10 @@
 						<div class="banner__game__interaction__info__shopInfo">
 							<div class="banner__game__interaction__info__shopInfo__buttons">
 								<div class="banner__game__interaction__info__shopInfo__buttons__button banner__game__interaction__info__shopInfo__buttons__button_basket">
-									<img src="img/icons/basket32.png" alt="">
+									<img src="img/icons/main/basket32.png" alt="">
 								</div>
 								<div class="banner__game__interaction__info__shopInfo__buttons__button banner__game__interaction__info__shopInfo__buttons__button_favorite">
-									<img src="img/icons/heart32.png" alt="">
+									<img src="img/icons/main/heart32.png" alt="">
 								</div>
 							</div>
 							<div class="banner__game__interaction__info__shopInfo__priceTag">
@@ -372,10 +374,12 @@
 				<h2 class="hidden">Наш выбор</h2>
 			</section>
 	
-			<div class="offers__blockButtonMore">
-				<div class="offers__blockButtonMore__button txt">
-					Показать еще
-					<img src="img/icons/arrRight32.png" alt="">
+			<div class="blockButtonMore">
+				<div class="blockButtonMore__button txt">
+					<span>Показать еще</span>
+					<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M9.71069 18.2929C10.1012 18.6834 10.7344 18.6834 11.1249 18.2929L16.0123 13.4006C16.7927 12.6195 16.7924 11.3537 16.0117 10.5729L11.1213 5.68254C10.7308 5.29202 10.0976 5.29202 9.70708 5.68254C9.31655 6.07307 9.31655 6.70623 9.70708 7.09676L13.8927 11.2824C14.2833 11.6729 14.2833 12.3061 13.8927 12.6966L9.71069 16.8787C9.32016 17.2692 9.32016 17.9023 9.71069 18.2929Z" fill="#fff"/>
+					</svg>
 				</div>
 			</div>
 		</section>
@@ -394,7 +398,7 @@
                         <a class="txt" href="">Помощь</a>
                     </nav>
                 </div>
-                <button class="txt flex-center" type="button">Как сделать ставку?</button>
+                <button class="txt flex-center" type="button">Как купить игру?</button>
             </div>
             <div class="footer__separator"></div>
             <div class="footer__body">
