--- a/index.html
+++ b/index.html
@@ -9,7 +9,53 @@
 </head>
 <body>
 	<header class="header">
-		<div class="header__bg" id="header__bg"></div>
+		<div class="header__bg" id="header__bg">
+			<div class="header__bg__top">
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+			</div>
+			<div class="header__bg__center"></div>
+			<div class="header__bg__bottom">
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+			</div>
+		</div>
 		<div class="header__left">
 			<a href="index.html" class="header__logo">
 				<img src="img/logos/logo.png" alt="">
