--- a/game.html
+++ b/game.html
@@ -109,9 +109,9 @@
 		</div>
 		<div class="header__right">
 			<nav class="header__nav">
-				<button title="Профиль" type="button" class="header__nav__button">
+				<a  href="profile.html" title="Профиль" type="button" class="header__nav__button">
 					<img src="img/icons/main/user64.png" alt="">
-				</button>
+				</a>
 				<a title="Избранное" href="#" class="header__nav__button">
 					<img src="img/icons/main/like64.png" alt="">
 				</a>
@@ -191,36 +191,15 @@
                 <div>
                     <div class="mainInfo__info__title txt"></div>
                     <div class="mainInfo__info__category">
-                        <a href="" class="mainInfo__info__category__nav">
-                            <img src="img/icons/game32.png" alt="">
-                            <div class="mainInfo__info__category__nav__forHover">
-                                <div class="mainInfo__info__category__nav__forHover__text txt">Делу время</div>
-                            </div>
-                        </a>
-                        <a href="" class="mainInfo__info__category__nav">
-                            <img src="img/icons/game32.png" alt="">
-                            <div class="mainInfo__info__category__nav__forHover">
-                                <div class="mainInfo__info__category__nav__forHover__text txt">Потехе хехехе</div>
-                            </div>
-                        </a>
-                        <a href="" class="mainInfo__info__category__nav">
-                            <img src="img/icons/game32.png" alt="">
-                            <div class="mainInfo__info__category__nav__forHover">
-                                <div class="mainInfo__info__category__nav__forHover__text txt">Кристофоро Коломбо</div>
-                            </div>
-                        </a>
-                        <a href="" class="mainInfo__info__category__nav">
-                            <img src="img/icons/game32.png" alt="">
-                            <div class="mainInfo__info__category__nav__forHover">
-                                <div class="mainInfo__info__category__nav__forHover__text txt">Винтер щит</div>
-                            </div>
-                        </a>
-                        <a href="" class="mainInfo__info__category__nav">
-                            <img src="img/icons/game32.png" alt="">
-                            <div class="mainInfo__info__category__nav__forHover">
-                                <div class="mainInfo__info__category__nav__forHover__text txt">Он зе ран</div>
-                            </div>
-                        </a>
+                        <div class="mainInfo__info__category__point txt">
+                            Шутеры
+                        </div>
+                        <div class="mainInfo__info__category__point txt">
+                            Приключения
+                        </div>
+                        <div class="mainInfo__info__category__point txt">
+                            Хоррор
+                        </div>
                     </div>
                 </div>
                 <div class="mainInfo__info__interactions">
