--- a/profile.html
+++ b/profile.html
@@ -159,7 +159,7 @@
                 </div>
             </section>
             <section class="settings">
-                <form class="txt" action="">
+                <form class="txt" action="" name="form_profile">
                     <div class="settings__left">
                         <div class="settings__conf">
                             <label for="">
@@ -181,14 +181,20 @@
 											<path d="M9.71069 18.2929C10.1012 18.6834 10.7344 18.6834 11.1249 18.2929L16.0123 13.4006C16.7927 12.6195 16.7924 11.3537 16.0117 10.5729L11.1213 5.68254C10.7308 5.29202 10.0976 5.29202 9.70708 5.68254C9.31655 6.07307 9.31655 6.70623 9.70708 7.09676L13.8927 11.2824C14.2833 11.6729 14.2833 12.3061 13.8927 12.6966L9.71069 16.8787C9.32016 17.2692 9.32016 17.9023 9.71069 18.2929Z" fill="#fff"/>
 										</svg>
 									</div>
-									<div class="settings__conf__regionInput__regions__list txt">
-										<div class="settings__conf__regionInput__regions__list__region" onclick="change_region('KZ')">KZ (Казахстан)</div>
-										<div class="settings__conf__regionInput__regions__list__region" onclick="change_region('LV')">LV (Латвия)</div>
-										<div class="settings__conf__regionInput__regions__list__region" onclick="change_region('RO')">RO (Румыния)</div>
-										<div class="settings__conf__regionInput__regions__list__region" onclick="change_region('TR')">TR (Турция)</div>
-										<div class="settings__conf__regionInput__regions__list__region" onclick="change_region('US')">US (США)</div>
-										<div class="settings__conf__regionInput__regions__list__region" onclick="change_region('EN')">EN (Англия)</div>
+									<div class="settings__conf__regionInput__regions__inner">
+										<div class="settings__conf__regionInput__regions__inner__search">
+											<input class="txt" type="text" name="inp_search_region" title="inp-search_region" placeholder="Поиск">
+										</div>
+										<div class="settings__conf__regionInput__regions__inner__list txt" id="regions_list">
+											<!-- <div class="settings__conf__regionInput__regions__inner__list__region" onclick="change_region('KZ')">KZ (Казахстан)</div>
+											<div class="settings__conf__regionInput__regions__inner__list__region" onclick="change_region('LV')">LV (Латвия)</div>
+											<div class="settings__conf__regionInput__regions__inner__list__region" onclick="change_region('RO')">RO (Румыния)</div>
+											<div class="settings__conf__regionInput__regions__inner__list__region" onclick="change_region('TR')">TR (Турция)</div>
+											<div class="settings__conf__regionInput__regions__inner__list__region" onclick="change_region('US')">US (США)</div>
+											<div class="settings__conf__regionInput__regions__inner__list__region" onclick="change_region('EN')">EN (Англия)</div> -->
+										</div>
 									</div>
+									
 								</div>
 							</div>
                         </div>
