--- a/game.html
+++ b/game.html
@@ -325,6 +325,7 @@
 	<script type="text/javascript" src="elements/elements.js"></script>
 	<script type="text/javascript" src="scripts/makeContentFunctions.js"></script>
 	<script type="text/javascript" src="scripts/script.js"></script>
+    <script type="text/javascript" src="scripts/header_bg.js"></script>
 	<script type="text/javascript" src="scripts/script_gameCard.js"></script>
 </body>
 </html>
