--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				</div>
 				<div class="header__catalog__navs__authors">
 					<div class="header__catalog__head txt">
-						<div class="header__catalog__head__title">Жанры</div>
+						<div class="header__catalog__head__title">Издатели и разработчики</div>
 						<div class="header__catalog__head__more">Показать все</div>
 					</div>
 					<div class="header__catalog__navs__authors__list">
@@ -602,6 +602,7 @@
 	<script type="text/javascript" src="scripts/makeContentFunctions.js"></script>
 	<script type="text/javascript" src="scripts/carousel.js"></script>
 	<script type="text/javascript" src="scripts/script.js"></script>
+	<script type="text/javascript" src="scripts/header_bg.js"></script>
 	<script type="text/javascript" src="scripts/script_index.js"></script>
 </body>
 </html>
