--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header class="header">
-		<div class="header__bg" id="header__bg"></div>
+		<div class="header__bg header__bg_profile" id="header__bg"></div>
 		<div class="header__left">
 			<a href="index.html" class="header__logo">
 				<img src="img/logos/logo.png" alt="">
@@ -109,7 +109,7 @@
 		</div>
 		<div class="header__right">
 			<nav class="header__nav">
-				<a  href="profile.html" title="Профиль" type="button" class="header__nav__button">
+				<a  href="profile.html" title="Профиль" type="button" class="header__nav__button header__nav__button_active">
 					<img src="img/icons/main/user64.png" alt="">
 				</a>
 				<a title="Избранное" href="#" class="header__nav__button">
