--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 					<h2 class="hidden">Баннер</h2>
 					<div class="banner__game">
 						<div class="banner__game__imgBlock">
-							<img src="img/banners/b3.jpg" alt="">
+							<img src="img/banners/b3.png" alt="">
 						</div>
 						<div class="banner__game__interaction">
 							<div class="banner__game__interaction__info">
@@ -502,7 +502,7 @@
 					<h2 class="hidden">Баннер</h2>
 					<div class="banner__game">
 						<div class="banner__game__imgBlock">
-							<img src="img/banners/b5.jpg" alt="">
+							<img src="img/banners/b5.png" alt="">
 						</div>
 						<div class="banner__game__interaction">
 							<div class="banner__game__interaction__info">
