--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 					</div>
 				</div>
 				<div class="header__catalog__gamelist" id="catalog_game_list">
-					<article class="gameH">
+					<article class="gameH gameH_headerCatalog">
 						<a href="game.html" class="gameH__banner">
 							<div class="gameH__banner__glass"></div>
 							<div class="gameH__banner__imgBlock"><img src="img/banners/farmsim.png" alt="Call Of Duty: Cold War 2"></div>
@@ -240,7 +240,7 @@
 							<div class="gameH__info__price txt">4599₽</div>
 						</div>
 					</article>
-					<article class="gameH">
+					<article class="gameH gameH_headerCatalog">
 						<a href="game.html" class="gameH__banner">
 							<div class="gameH__banner__glass"></div>
 							<div class="gameH__banner__imgBlock"><img src="img/banners/farmsim.png" alt="Call Of Duty: Cold War 2"></div>
@@ -272,7 +272,7 @@
 							<div class="gameH__info__price txt">4599₽</div>
 						</div>
 					</article>
-					<article class="gameH">
+					<article class="gameH gameH_headerCatalog">
 						<a href="game.html" class="gameH__banner">
 							<div class="gameH__banner__glass"></div>
 							<div class="gameH__banner__imgBlock"><img src="img/banners/farmsim.png" alt="Call Of Duty: Cold War 2"></div>
@@ -304,7 +304,7 @@
 							<div class="gameH__info__price txt">4599₽</div>
 						</div>
 					</article>
-					<article class="gameH">
+					<article class="gameH gameH_headerCatalog">
 						<a href="game.html" class="gameH__banner">
 							<div class="gameH__banner__glass"></div>
 							<div class="gameH__banner__imgBlock"><img src="img/banners/farmsim.png" alt="Call Of Duty: Cold War 2"></div>
@@ -340,7 +340,9 @@
 			</div>
 		</div>
 	</header>
+
 	<div class="blackoutBlock fixed-zero" onclick="open_catalogNavs()"></div>
+	
 	<main id="main">
 		<div class="inner">
 			<section class="carousel">
