--- a/index.html
+++ b/index.html
@@ -65,16 +65,18 @@
 							<div class="header__catalog__head__title">Жанры</div>
 							<div class="header__catalog__head__more">Показать все</div>
 						</div>
-						<div class="header__catalog__navs__genres__list">
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-shooter" onmouseover="change_game_category('shooter')" onmouseout="stop_change_game_category()">
+						<div class="header__catalog__navs__genres__list" id="list_genres_HC">
+							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-shooter">
 								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
 								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
 								<div class="header__catalog__navs__indicator"></div>
+								<div class="header__catalog__navs__clickBlock" onmouseover="change_game_category('shooter')" onmouseout="stop_change_game_category()"></div>
 							</div>
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-g5" onmouseover="change_game_category('g5')" onmouseout="stop_change_game_category()">
+							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-g5">
 								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
 								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
 								<div class="header__catalog__navs__indicator"></div>
+								<div class="header__catalog__navs__clickBlock" onmouseover="change_game_category('g5')" onmouseout="stop_change_game_category()"></div>
 							</div>
 							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-g3" onmouseover="change_game_category('g3')" onmouseout="stop_change_game_category()">
 								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
@@ -133,13 +135,14 @@
 							<div class="header__catalog__head__title">Издатели и разработчики</div>
 							<div class="header__catalog__head__more">Показать все</div>
 						</div>
-						<div class="header__catalog__navs__authors__list">
-							<div class="header__catalog__navs__authors__list__author header__catalog__navs__nav" id="header__catalog__nav-Activision" onmouseover="change_game_category('Activision')" onmouseout="stop_change_game_category()">
+						<div class="header__catalog__navs__authors__list" id="list_authors_HC">
+							<div class="header__catalog__navs__authors__list__author header__catalog__navs__nav" id="header__catalog__nav-Activision">
 								<div class="header__catalog__navs__authors__list__author__img">
 									<img src="img/logos/authors/Activision.svg" alt="">
 								</div>
 								<div class="header__catalog__navs__authors__list__author__title txt">Activision</div>
 								<div class="header__catalog__navs__indicator"></div>
+								<div class="header__catalog__navs__clickBlock" onmouseover="change_game_category('shooter')" onmouseout="stop_change_game_category()"></div>
 							</div>
 							<div class="header__catalog__navs__authors__list__author header__catalog__navs__nav" id="header__catalog__nav-p1" onmouseover="change_game_category('p1')" onmouseout="stop_change_game_category()">
 								<div class="header__catalog__navs__authors__list__author__img">
